<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_home"
        />
    <item
        android:id="@+id/applied_companies"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_assignment_turned_in_24"
        android:title="@string/menu_applied_companies"
        />
    <item
        android:id="@+id/analysis"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_analytics_24"
        android:title="@string/menu_analysis"
        />
    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/menu_profile"
        />
</menu>