<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".views.LoginActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/word_cloud_no_bg"
            android:scaleType="centerCrop"
            android:alpha="0.4"
            android:contentDescription="@string/login_bg" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="17dp"
            android:layout_gravity="center"
            android:layout_margin="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingVertical="10dp"
                android:paddingHorizontal="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:textSize="24sp"
                    android:textColor="@color/orange"
                    android:layout_marginTop="40dp"
                    android:layout_gravity="center"
                    />
                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email_id"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawableTint="@color/dark_grey"
                    android:drawablePadding="10dp"
                    android:textSize="@dimen/large_text"
                    android:padding="15dp"
                    android:background="@drawable/edit_text_bg"
                    android:layout_marginTop="40dp"
                    tools:targetApi="m"
                    android:importantForAutofill="no" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="10dp"
                    android:textSize="@dimen/large_text"
                    android:drawableTint="@color/dark_grey"
                    android:background="@drawable/edit_text_bg"
                    android:padding="15dp"
                    android:layout_marginTop="30dp"
                    tools:targetApi="m" />

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:background="@drawable/login_btn_bg"
                    android:layout_gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>