<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp"
    android:paddingVertical="10dp"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_height="wrap_content"
        app:cardElevation="3dp">
        <ImageView
            android:id="@+id/company_logo"
            android:contentDescription="@string/company_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_image_24"
            app:tint="@color/grey"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="1dp"
        android:layout_marginEnd="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingVertical="20dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="bottom"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:text="@string/placeholder"
                    android:textSize="16sp"
                    />
                <TextView
                    android:id="@+id/company_package"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/orange"
                    android:text="@string/placeholder"
                    android:textSize="14sp"
                    />

            </LinearLayout>
            <TextView
                android:layout_width = "0dp"
                android:layout_height = "wrap_content"
                android:layout_weight = "1"/>
            <Button
                android:id="@+id/show_more_btn"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_more"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:background="@drawable/login_btn_bg"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>